# heimdall

./: .gitignore  Cargo.toml  README.md  deny.toml  flake.nix
.cargo/: audit.toml
crates/heimdall/: Cargo.toml
crates/heimdall-config/: Cargo.toml
crates/heimdall-config/src/: error.rs  lib.rs  load.rs  schema.rs  validate.rs
crates/heimdall-config/testdata/: duplicate_transport.toml  example.toml  missing_transport.toml
crates/heimdall-config/tests/: parse.rs  validate.rs
crates/heimdall-core/: Cargo.toml
crates/heimdall-core/src/: artifact.rs  error.rs  ids.rs  kind.rs  lib.rs  observation.rs  state.rs  stimulus.rs  verdict.rs
crates/heimdall-core/tests/: round_trip.rs
crates/heimdall-daemon/: Cargo.toml  build.rs
crates/heimdall-daemon/assets/: app.css  app.js
crates/heimdall-daemon/migrations/: 20260525000001_initial.sql  20260525000002_campaigns.sql
crates/heimdall-daemon/src/: campaign.rs  dump.rs  dut_registry.rs  error.rs  event_bus.rs  factory.rs  lease.rs  lib.rs  queue.rs  runtime.rs  server.rs  templates.rs  types.rs  worker.rs
crates/heimdall-daemon/src/routes/: campaigns.rs  duts.rs  events.rs  health.rs  i18n.rs  jobs.rs  metrics.rs  mod.rs  web.rs
crates/heimdall-daemon/src/store/: local_fs.rs  mod.rs  sqlite.rs
crates/heimdall-daemon/templates/: index.html
crates/heimdall-daemon/tests/: aegis_load_http.rs  aegis_openocd_spawn.rs  aegis_vector_http.rs  campaigns_http.rs  dump_restore.rs  dut_registry_http.rs  http_smoke.rs  i18n_http.rs  local_fs_blob.rs  metrics_http.rs  netlist_http.rs  probe_connection.rs  river_boot_http.rs  river_openocd_spawn.rs  ssr.rs  store_sqlite.rs  web_smoke.rs
crates/heimdall-daemon/tests/common/: mock_openocd.rs  mod.rs
crates/heimdall-driver/: Cargo.toml
crates/heimdall-driver/src/: error.rs  lib.rs  mock.rs  trait_def.rs
crates/heimdall-driver/src/aegis/: diff.rs  jtag.rs  mod.rs  pinmap.rs
crates/heimdall-driver/src/river/: coverage.rs  debug_module.rs  diff.rs  mod.rs  observe.rs
crates/heimdall-driver/tests/: aegis_load.rs  aegis_mock_flow.rs  aegis_pads.rs  aegis_pads_lifecycle.rs  mock_flow.rs  mock_openocd_smoke.rs  river_debug_module.rs  river_hil.rs
crates/heimdall-driver/tests/common/: mock_openocd.rs  mod.rs
crates/heimdall-eda/: Cargo.toml
crates/heimdall-eda/src/: cli.rs  main.rs
crates/heimdall-eda/src/cmd/: campaign.rs  daemon.rs  doctor.rs  fuzz.rs  mod.rs  probe.rs  run.rs  tui.rs
crates/heimdall-fuzzer/: Cargo.toml
crates/heimdall-fuzzer/examples/: mock_fuzz.rs
crates/heimdall-fuzzer/src/: corpus.rs  coverage.rs  engine.rs  error.rs  fuzz_test.rs  lib.rs  mutator.rs  scheduler.rs  traits.rs
crates/heimdall-fuzzer/src/generator/: bitstream.rs  cranelift_gen.rs  mod.rs  raw_asm.rs
crates/heimdall-fuzzer/tests/: coverage_growth.rs  engine_mock.rs  strict_divergence.rs
crates/heimdall-golden/: Cargo.toml
crates/heimdall-golden/examples/: render_netlist.rs
crates/heimdall-golden/src/: aegis.rs  error.rs  lib.rs  mock.rs  trait_def.rs
crates/heimdall-golden/src/spice/: mod.rs  parse.rs
crates/heimdall-golden/src/spice/render/: layout.rs  mod.rs  parse.rs  svg.rs
crates/heimdall-golden/src/spike/: log_parser.rs  mod.rs
crates/heimdall-golden/tests/: mock_step.rs  spice_render.rs  spice_smoke.rs
crates/heimdall-i18n/: Cargo.toml
crates/heimdall-i18n/locales/: en.toml  ja.toml
crates/heimdall-i18n/src/: lib.rs
crates/heimdall-test/: Cargo.toml
crates/heimdall-test/examples/: mock_bringup.rs
crates/heimdall-test/src/: error.rs  lib.rs  runner.rs  test_trait.rs
crates/heimdall-test/tests/: runner_mock.rs
crates/heimdall-tools/: Cargo.toml
crates/heimdall-tools/src/: cache.rs  chain.rs  clang_asm.rs  error.rs  lib.rs  mock.rs  trait_def.rs
crates/heimdall-tools/tests/: chain.rs
crates/heimdall-transport/: Cargo.toml
crates/heimdall-transport/src/: caps.rs  error.rs  gpio_cdev.rs  lib.rs  mock.rs  serial.rs  traits.rs
crates/heimdall-transport/src/bitbang_jtag/: mod.rs  scan.rs  state.rs
crates/heimdall-transport/src/ftdi/: device.rs  mock.rs  mod.rs  mpsse.rs
crates/heimdall-transport/src/openocd/: mod.rs  parse.rs  spawn.rs
crates/heimdall-transport/tests/: bitbang_jtag.rs  mock_loopback.rs
crates/heimdall-tui/: Cargo.toml
crates/heimdall-tui/src/: app.rs  client.rs  error.rs  event.rs  lib.rs  ui.rs
crates/heimdall-tui/src/views/: campaigns.rs  duts.rs  job_detail.rs  jobs.rs  mod.rs
crates/heimdall-tui/tests/: duts_client.rs  reconnect.rs
crates/heimdall/src/: lib.rs
nix/modules/: darwin.nix  home-manager.nix  nixos.nix
nix/tests/: daemon-api.nix  default.nix  lib.nix  module-basic.nix  silicon-aegis.nix  silicon-river.nix
pkgs/heimdall-eda/: default.nix
pkgs/heimdall-logo/: default.nix  pyproject.toml
pkgs/heimdall-logo/heimdall_logo/: __init__.py  __main__.py  colors.py  logo.py  logomark.py  logotype.py  svg.py
testdata/river-bringup/: hello.S  hello.elf
testdata/river-hello/: expected.json  hello.S
testdata/spice/: rc_divider.sp
