[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/MidstallSoftware/heimdall"

[workspace.dependencies]
# core
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
bytes = "1"
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# async
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "process", "fs", "time", "sync", "net"] }
async-trait = "0.1"
futures = "0.3"

# errors + logging
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# binary-only
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
eyre = "0.6"

# transports (feature-gated where appropriate)
tokio-serial = "5"

# tests
assert_matches = "1.5"
tempfile = "3"

# intra-workspace
heimdall-core      = { path = "crates/heimdall-core",      version = "0.1.0" }
heimdall-config    = { path = "crates/heimdall-config",    version = "0.1.0" }
heimdall-transport = { path = "crates/heimdall-transport", version = "0.1.0" }
heimdall-tools     = { path = "crates/heimdall-tools",     version = "0.1.0" }
heimdall-golden    = { path = "crates/heimdall-golden",    version = "0.1.0" }
heimdall-driver    = { path = "crates/heimdall-driver",    version = "0.1.0" }
heimdall-test      = { path = "crates/heimdall-test",      version = "0.1.0" }
heimdall           = { path = "crates/heimdall",           version = "0.1.0" }
