[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/Midstall/heimdall"
homepage = "https://midstall.com/products/heimdall"
authors = ["Midstall <inquire@midstall.com>"]
description = "Post-silicon hardware verification suite: HIL-driven test, golden-model comparison, and coverage-guided fuzzing for FPGAs and CPUs."
readme = "README.md"
keywords = ["hardware", "verification", "fuzzing", "jtag", "fpga"]
categories = ["development-tools::testing", "embedded", "hardware-support"]

[workspace.dependencies]
# core
serde = { version = "1", features = ["derive"] }
base64 = "0.22"
serde_json = "1"
toml = "0.8"
bytes = "1"
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# async
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "process", "fs", "time", "sync", "net"] }
async-trait = "0.1"
futures = "0.3"

# errors + logging
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# binary-only
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
eyre = "0.6"
directories = "5"

# tui
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio-tungstenite = "0.24"

# transports (feature-gated where appropriate)
tokio-serial = "5"
gpiocdev = "0.7"
nusb = "0.1"

# daemon
axum = { version = "0.7", features = ["ws", "macros"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate", "chrono"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# tests
tempfile = "3"

# web ui
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
mime_guess = "2"
askama = "0.12"

# dump/restore
tar = "0.4"

# fuzzer
rand = { version = "0.8", features = ["std_rng", "small_rng"] }
cranelift-codegen = { version = "0.132", features = ["riscv64"] }
cranelift-frontend = "0.132"
target-lexicon = "0.13"

aegis-ip = { git = "https://github.com/Midstall/aegis.git", rev = "dce7edc5706d6c2539fa2e17bdb7e3528c987e09", version = "0.1.0" }
aegis-sim = { git = "https://github.com/Midstall/aegis.git", rev = "dce7edc5706d6c2539fa2e17bdb7e3528c987e09", version = "0.1.0" }

# intra-workspace
heimdall-i18n      = { path = "crates/heimdall-i18n",      version = "0.1.0" }
heimdall-core      = { path = "crates/heimdall-core",      version = "0.1.0" }
heimdall-config    = { path = "crates/heimdall-config",    version = "0.1.0" }
heimdall-transport = { path = "crates/heimdall-transport", version = "0.1.0" }
heimdall-tools     = { path = "crates/heimdall-tools",     version = "0.1.0" }
heimdall-golden    = { path = "crates/heimdall-golden",    version = "0.1.0" }
heimdall-driver    = { path = "crates/heimdall-driver",    version = "0.1.0" }
heimdall-test      = { path = "crates/heimdall-test",      version = "0.1.0" }
heimdall-fuzzer    = { path = "crates/heimdall-fuzzer",    version = "0.1.0" }
heimdall-daemon    = { path = "crates/heimdall-daemon",    version = "0.1.0" }
heimdall-tui       = { path = "crates/heimdall-tui",       version = "0.1.0" }
heimdall           = { path = "crates/heimdall",           version = "0.1.0" }
