[package]
name = "heimdall-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "HTTP/WebSocket daemon for Heimdall: job queue, blob store, campaign orchestration, and embedded web UI."

[features]
default = ["sqlite"]
sqlite = ["dep:sqlx"]
ftdi = ["heimdall-transport/ftdi"]
aegis = [
    "heimdall-driver/aegis",
    "heimdall-golden/aegis",
    "heimdall-transport/bitbang-jtag",
    "heimdall-transport/linux-cdev",
    "heimdall-transport/openocd",
]
river = [
    "heimdall-driver/river",
    "heimdall-golden/spike",
    "heimdall-transport/openocd",
]

[dependencies]
heimdall-config = { workspace = true }
heimdall-core.workspace = true
heimdall-i18n.workspace = true
heimdall-driver.workspace = true
heimdall-golden = { workspace = true, features = ["spice"] }
heimdall-test.workspace = true
heimdall-transport.workspace = true
base64 = { workspace = true }

async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["sync", "fs", "macros", "rt-multi-thread", "time", "net", "signal"] }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }
bytes.workspace = true
sha2.workspace = true
hex.workspace = true

axum.workspace = true
tower-http.workspace = true
rust-embed = { workspace = true }
mime_guess = { workspace = true }
askama = { workspace = true }

tar = { workspace = true }

sqlx = { workspace = true, optional = true }
futures.workspace = true

[dev-dependencies]
heimdall-transport.workspace = true
tempfile.workspace = true
reqwest.workspace = true
base64 = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
