[package]
name = "heimdall-eda"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Heimdall command-line interface: `heimdall run`, `heimdall campaign`, `heimdall fuzz`, `heimdall daemon`, `heimdall tui`."

[[bin]]
name = "heimdall"
path = "src/main.rs"

[dependencies]
heimdall = { workspace = true, features = ["fuzzer", "daemon", "tui", "river"] }
heimdall-daemon = { workspace = true, features = ["sqlite", "river"] }

# heimdall-daemon's `aegis` feature pulls in heimdall-transport/linux-cdev
# for chardev GPIO, which only builds on Linux. Darwin builds get a daemon
# without the Aegis factories. River works on both via OpenOCD over TCP.
[target.'cfg(target_os = "linux")'.dependencies]
heimdall = { workspace = true, features = ["aegis"] }
heimdall-daemon = { workspace = true, features = ["aegis"] }
heimdall-i18n = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
clap.workspace = true
color-eyre.workspace = true
eyre.workspace = true
directories.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
