[package]
name = "heimdall-fuzzer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Coverage-guided hardware fuzzer for Heimdall: generators, mutators, and HIL/silicon coverage tracking."

[features]
default = []
aegis = ["heimdall-golden/aegis", "dep:aegis-ip"]
cranelift = ["dep:cranelift-codegen", "dep:cranelift-frontend", "dep:target-lexicon"]

[dependencies]
heimdall-core.workspace = true
heimdall-driver.workspace = true
heimdall-golden.workspace = true
heimdall-test.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true }
bytes.workspace = true
rand.workspace = true
serde_json = { workspace = true }

aegis-ip = { workspace = true, optional = true }

cranelift-codegen = { workspace = true, optional = true }
cranelift-frontend = { workspace = true, optional = true }
target-lexicon = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber.workspace = true
